2008-07-01  Brian Bidulock  <bidulock@openss7.org>

	- Updated manual pages and implementations:

	* configure.ac: add gettextize
	* Makefile.am: handle gettext

	* doc/man/Makefile.am: add manual pages
	* doc/man/man7/CD_ABORT_OUTPUT_REQ.7.man: update manual page
	* doc/man/man7/CD_ALLOW_INPUT_REQ.7.man: update manual page
	* doc/man/man7/CD_ATTACH_REQ.7.man: update manual page
	* doc/man/man7/CD_BAD_FRAME_IND.7.man: update manual page
	* doc/man/man7/CD_DETACH_REQ.7.man: update manual page
	* doc/man/man7/CD_DISABLE_CON.7.man: update manual page
	* doc/man/man7/CD_DISABLE_REQ.7.man: update manual page
	* doc/man/man7/CD_ENABLE_CON.7.man: update manual page
	* doc/man/man7/CD_ENABLE_REQ.7.man: update manual page
	* doc/man/man7/CD_ERROR_ACK.7.man: update manual page
	* doc/man/man7/CD_ERROR_IND.7.man: update manual page
	* doc/man/man7/CD_HALT_INPUT_REQ.7.man: update manual page
	* doc/man/man7/CD_INFO_ACK.7.man: update manual page
	* doc/man/man7/CD_INFO_REQ.7.man: update manual page
	* doc/man/man7/CD_MODEM_SIG_IND.7.man: update manual page
	* doc/man/man7/CD_MODEM_SIG_POLL.7.man: update manual page
	* doc/man/man7/CD_MODEM_SIG_REQ.7.man: update manual page
	* doc/man/man7/CD_MUX_NAME_REQ.7.man: update manual page
	* doc/man/man7/CD_OK_ACK.7.man: update manual page
	* doc/man/man7/CD_READ_REQ.7.man: update manual page
	* doc/man/man7/CD_UNITDATA_ACK.7.man: update manual page
	* doc/man/man7/CD_UNITDATA_IND.7.man: update manual page
	* doc/man/man7/CD_UNITDATA_REQ.7.man: update manual page
	* doc/man/man7/CD_WRITE_READ_REQ.7.man: update manual page
	* doc/man/man7/DL_AGGR_REQ.7.man: update manual page
	* doc/man/man7/DL_BIND_ACK.7.man: update manual page
	* doc/man/man7/DL_BIND_REQ.7.man: update manual page
	* doc/man/man7/DL_CAPABILITY_ACK.7.man: update manual page
	* doc/man/man7/DL_CAPABILITY_REQ.7.man: update manual page
	* doc/man/man7/DL_CLR_SR_REQ.7.man: update manual page
	* doc/man/man7/DL_CLR_STATISTICS_REQ.7.man: update manual page