@@ -1,5 +1,10 @@
 2008-07-01  Brian Bidulock  <bidulock@openss7.org>
 
+	* po/.cvsignore: added po files for gettext
+	* po/LINGUAS: added po files for gettext
+	* po/Makevars: added po files for gettext
+	* po/POTFILES.in: added po files for gettext
+
 	- Updated manual pages and implementations:
 
 	* configure.ac: add gettextize
